@@ -1,3 +1,7 @@
+2010-04-23  Piotr Fusik  <fox@scene.pl>
+* win32/shellex/ASAPShellEx.cpp: register for all supported file types
+
+
 2010-04-22  Piotr Fusik  <fox@scene.pl>
 * win32/shellex/ASAPShellEx.cpp: added "PAL/NTSC"
 
